feat: always favor `protonyms.fossil` over `taxa.fossil` (to be removed)
